--- a/index.html
+++ b/index.html
@@ -3,92 +3,66 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Makda — Portfolio</title>
-  <link rel="stylesheet" href="style.css?v=20260107z" />
+  <title>Curated Omniscience</title>
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <main class="stage" id="stage">
-    <!-- Hex pattern on canvas (single-stroke grid), erased hex-by-hex -->
-    <canvas id="hexCanvas" class="hex-canvas" aria-hidden="true"></canvas>
+  <!-- PAGE UNDER THE CURTAIN -->
+  <main id="site" class="site" aria-hidden="true">
+    <section class="grid">
+      <a class="card" href="#" aria-label="Work 01">
+        <div class="card-title">WORK 01</div>
+        <div class="card-sub">Identity / symbol / control</div>
+        <div class="card-tag">archive node 01</div>
+      </a>
 
-    <!-- Particle canvas (slam burst) -->
-    <canvas id="fx" class="fx" aria-hidden="true"></canvas>
+      <a class="card" href="#" aria-label="Work 02">
+        <div class="card-title">WORK 02</div>
+        <div class="card-sub">Memory / metadata / signal</div>
+        <div class="card-tag">archive node 02</div>
+      </a>
 
-    <!-- Crown: only visible object on boot -->
-    <button id="crownBtn" class="crown-btn" type="button" aria-label="Enter site">
-      <svg id="crownSvg" class="crown" viewBox="0 0 120 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path id="crownPath"
-          d="M18 64
-             L18 30
-             Q18 26 22 30
-             L44 52
-             Q46 56 49 50
-             L60 10
-             Q62 7 65 12
-             L77 50
-             Q79 56 83 52
-             L102 30
-             Q106 26 102 33
-             L102 64
-             Q70 70 60 70
-             Q40 70 18 64"
-          stroke="#FFF6C1" stroke-width="5"
-          stroke-linecap="round" stroke-linejoin="round"
-        />
-        <path id="basePath"
-          d="M18 64 L102 64"
-          stroke="rgba(255,246,193,0.55)" stroke-width="4"
-          stroke-linecap="round"
-        />
-      </svg>
-      <span class="boot-hint" aria-hidden="true">
-        click the crown
-        <span class="boot-hint-sub">to begin</span>
-      </span>
-    </button>
+      <a class="card" href="#" aria-label="Work 03">
+        <div class="card-title">WORK 03</div>
+        <div class="card-sub">Speed / power / spectacle</div>
+        <div class="card-tag">archive node 03</div>
+      </a>
 
-    <!-- Main site -->
-    <section id="site" class="site" aria-label="Homepage">
-      <header class="site-header">
-        <div id="heroTitle" class="hero-title" aria-live="polite"></div>
-      </header>
-
-      <section class="cards" aria-label="Sections">
-        <a class="card c1" href="work_01.html">
-          <div class="card-title">WORK 01</div>
-          <div class="card-sub">Identity / symbol / control</div>
-          <div class="card-tag">archive node 01</div>
-        </a>
-
-        <a class="card c2" href="work_02.html">
-          <div class="card-title">WORK 02</div>
-          <div class="card-sub">Memory / metadata / signal</div>
-          <div class="card-tag">archive node 02</div>
-        </a>
-
-        <a class="card c3" href="work_03.html">
-          <div class="card-title">WORK 03</div>
-          <div class="card-sub">Speed / power / spectacle</div>
-          <div class="card-tag">archive node 03</div>
-        </a>
-
-        <a class="card c4" href="about.html">
-          <div class="card-title">ABOUT</div>
-          <div class="card-sub">Who I am + what I do</div>
-          <div class="card-tag">bio / contact</div>
-        </a>
-      </section>
+      <a class="card" href="#" aria-label="About">
+        <div class="card-title">ABOUT</div>
+        <div class="card-sub">who i am + what i do</div>
+        <div class="card-tag">bio / contact</div>
+      </a>
     </section>
 
-    <!-- Texture stack (your art = your vibe) -->
-    <div class="texture texture--grit" aria-hidden="true"></div>
-    <div class="texture texture--splat" aria-hidden="true"></div>
-    <div class="texture texture--halftone" aria-hidden="true"></div>
-    <div class="texture texture--eye" aria-hidden="true"></div>
-    <div class="texture texture--scan" aria-hidden="true"></div>
-    <div class="texture texture--vignette" aria-hidden="true"></div>
+    <div class="hero">
+      <h1 id="heroTitle" class="hero-title"></h1>
+    </div>
   </main>
 
-  <script src="main.js?v=20260107z"></script>
+  <!-- TOP LAYER THAT DISSOLVES -->
+  <div id="curtain" class="curtain">
+    <canvas id="hexCanvas" class="hex-canvas" aria-hidden="true"></canvas>
+    <canvas id="fxCanvas" class="fx" aria-hidden="true"></canvas>
+
+    <button id="crownBtn" class="crown-btn" type="button" aria-label="Enter archive">
+      <svg id="crownSvg" class="crown" viewBox="0 0 900 520" fill="none" aria-hidden="true">
+        <path id="crownPath"
+          d="M140 395 V160 Q140 140 160 140 L300 300 Q315 315 330 300 L450 135 Q465 115 480 135 L600 300 Q615 315 630 300 L740 180 Q760 160 760 180 V395"
+          stroke="rgba(255,242,190,0.95)" stroke-width="40" stroke-linecap="round" stroke-linejoin="round"/>
+        <path id="basePath"
+          d="M170 405 Q450 445 730 405"
+          stroke="rgba(255,242,190,0.55)" stroke-width="40" stroke-linecap="round"/>
+      </svg>
+
+      <div class="cta">
+        <div class="cta-top">click the crown</div>
+        <div class="cta-bot">to begin</div>
+      </div>
+    </button>
+  </div>
+
+  <script src="./main.js"></script>
 </body>
 </html>
+
