about me draft done, starting on identity tab

--- a/index.html
+++ b/index.html
@@ -69,6 +69,24 @@
         <div class="folder-body">
           <!-- Panel: ABOUT -->
 <section class="panel is-active" role="tabpanel" aria-labelledby="tab-about" data-panel="about">
+  <div class="about-copy">
+  <h2 class="about-title">hi, i’m makda.</h2>
+
+  <p class="about-text">
+    I’m an interaction design + economics student at GWU building systems that feel human —
+    from grungy, halftone-heavy visuals to tools that map culture (music, identity, archives).
+  </p>
+
+  <p class="about-text">
+    I like turning research into interface, and interface into story. I’m usually bouncing between
+    Figma, After Effects, and creative code — then trying to make it all look like a curated folder on your desktop.
+  </p>
+
+  <p class="about-text about-text--muted">
+    Currently: portfolio refresh • genre.exe experiments • accessibility + AI video work
+  </p>
+</div>
+
   <div class="panel-inner">
 
     <!-- Photo reveal (pieces stacked + animated) -->
