identity draft update

--- a/index.html
+++ b/index.html
@@ -140,14 +140,135 @@
 
 
           <!-- Panel: IDENTITY -->
-          <section class="panel" role="tabpanel" aria-labelledby="tab-identity" data-panel="identity" hidden>
-            <div class="panel-inner">
-              <div class="placeholder">
-                <div class="ph-title">Identity</div>
-                <div class="ph-sub">coming soon</div>
-              </div>
-            </div>
-          </section>
+<section class="panel" role="tabpanel" aria-labelledby="tab-identity" data-panel="identity" hidden>
+  <div class="panel-inner panel-scroll">
+    <header class="panel-head">
+      <h2 class="panel-title">identity</h2>
+      <p class="panel-sub">posters • systems • branding • edits</p>
+    </header>
+
+    <div class="proj-list">
+
+      <!-- 1) Days Before Rodeo posters -->
+      <section class="work-row">
+  <div class="work-media">
+    <div class="thumb-row">
+      <a class="thumb" href="./assets/identity/dbr-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-1.png" alt="Days Before Rodeo poster 1"></a>
+      <a class="thumb" href="./assets/identity/dbr-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-2.png" alt="Days Before Rodeo poster 2"></a>
+      <a class="thumb" href="./assets/identity/dbr-3.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-3.png" alt="Days Before Rodeo poster 3"></a>
+    </div>
+  </div>
+
+  <div class="work-copy">
+    <h3 class="work-title">days before rodeo — posters</h3>
+    <p class="work-text">[placeholder] concept + typography notes + what this series was for.</p>
+  </div>
+</section>
+
+
+      <!-- 2) genre.exe -->
+      <section class="work-row">
+  <div class="work-media">
+    <div class="thumb-row">
+      <a class="thumb" href="./assets/identity/genre-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/genre-1.png" alt="genre.exe screenshot 1"></a>
+      <a class="thumb" href="./assets/identity/genre-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/genre-2.png" alt="genre.exe screenshot 2"></a>
+      <a class="thumb" href="./assets/identity/genre-3.png" target="_blank" rel="noreferrer"><img src="./assets/identity/genre-3.png" alt="genre.exe screenshot 3"></a>
+    </div>
+
+    <div class="work-actions">
+      <a class="mini-btn" href="https://makdabekele.github.io/APIProject/" target="_blank" rel="noreferrer">click to view website</a>
+    </div>
+  </div>
+
+  <div class="work-copy">
+    <h3 class="work-title">genre.exe</h3>
+    <p class="work-text">[placeholder] what it critiques, how to use it, and what you learned building it.</p>
+  </div>
+</section>
+
+
+      <!-- 3) Eyes edit -->
+      <section class="work-row">
+  <div class="work-media">
+    <div class="thumb-row">
+      <a class="thumb" href="./assets/identity/eyes-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/eyes-1.png" alt="Eyes edit 1"></a>
+      <a class="thumb" href="./assets/identity/eyes-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/eyes-2.png" alt="Eyes edit 2"></a>
+      <a class="thumb" href="./assets/identity/eyes-3.png" target="_blank" rel="noreferrer"><img src="./assets/identity/eyes-3.png" alt="Eyes edit 3"></a>
+    </div>
+  </div>
+
+  <div class="work-copy">
+    <h3 class="work-title">eyes — photoshop iterations</h3>
+    <p class="work-text">[placeholder] technique notes + what changed between versions.</p>
+  </div>
+</section>
+
+
+      <!-- 4) Misc posters + promo video -->
+      <section class="work-row">
+  <div class="work-media">
+    <div class="thumb-row">
+      <a class="thumb" href="./assets/identity/misc-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/misc-1.png" alt="Misc poster 1"></a>
+      <a class="thumb" href="./assets/identity/misc-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/misc-2.png" alt="Misc poster 2"></a>
+
+      <div class="thumb thumb--video">
+        <video class="thumb-video" controls preload="metadata">
+          <source src="./assets/identity/misc-3.MOV" type="video/quicktime">
+        </video>
+      </div>
+    </div>
+  </div>
+
+  <div class="work-copy">
+    <h3 class="work-title">posters + promo</h3>
+    <p class="work-text">[placeholder] what the event was + what your role was + tools used.</p>
+  </div>
+</section>
+
+
+      <!-- 5) Logos -->
+      <section class="work-row">
+  <div class="work-media">
+    <div class="thumb-row">
+      <a class="thumb" href="./assets/identity/logo-pcart.png" target="_blank" rel="noreferrer"><img src="./assets/identity/logo-pcart.png" alt="P-Cart logo"></a>
+      <a class="thumb" href="./assets/identity/logo-ecdc-womens.png" target="_blank" rel="noreferrer"><img src="./assets/identity/logo-ecdc-womens.png" alt="ECDC women’s empowerment logo"></a>
+    </div>
+  </div>
+
+  <div class="work-copy">
+    <h3 class="work-title">logos — p-cart + ecdc women’s empowerment</h3>
+    <p class="work-text">[placeholder] constraints, iteration, and final usage.</p>
+  </div>
+</section>
+
+
+      <!-- 6) Nintendo deck — mouse-scroll carousel -->
+      <section class="work-row work-row--deck">
+  <div class="work-media">
+    <div class="deck-rail" data-deck>
+      <div class="deck-track">
+        <img src="./assets/identity/nintendo_rebrand_presentation-01.png"  alt="Nintendo deck page 1">
+        <img src="./assets/identity/nintendo_rebrand_presentation-02.png"  alt="Nintendo deck page 2">
+        <img src="./assets/identity/nintendo_rebrand_presentation-03.png"  alt="Nintendo deck page 3">
+        <img src="./assets/identity/nintendo_rebrand_presentation-04.png"  alt="Nintendo deck page 4">
+        <img src="./assets/identity/nintendo_rebrand_presentation-05.png"  alt="Nintendo deck page 5">
+        <img src="./assets/identity/nintendo_rebrand_presentation-06.png"  alt="Nintendo deck page 6">
+        <img src="./assets/identity/nintendo_rebrand_presentation-07.png"  alt="Nintendo deck page 7">
+        <img src="./assets/identity/nintendo_rebrand_presentation-08.png"  alt="Nintendo deck page 8">
+        <img src="./assets/identity/nintendo_rebrand_presentation-09.png"  alt="Nintendo deck page 9">
+        <img src="./assets/identity/nintendo_rebrand_presentation-10.png" alt="Nintendo deck page 10">
+        <img src="./assets/identity/nintendo_rebrand_presentation-11.png" alt="Nintendo deck page 11">
+      </div>
+    </div>
+  </div>
+
+  <div class="work-copy">
+    <h3 class="work-title">nintendo connect — rebrand deck</h3>
+    <p class="work-text">[placeholder] the system (type, color, UI) + what problems you were solving.</p>
+  </div>
+</section>
+
+
 
           <!-- Panel: MUSIC -->
           <section class="panel" role="tabpanel" aria-labelledby="tab-music" data-panel="music" hidden>
