about me text changes

--- a/index.html
+++ b/index.html
@@ -73,17 +73,27 @@
   <h2 class="about-title">hi, i’m makda.</h2>
 
   <p class="about-text">
-    I’m an interaction design + economics student at GWU building systems that feel human —
-    from grungy, halftone-heavy visuals to tools that map culture (music, identity, archives).
+    I’m Makda, a junior studying Interaction Design and Economics at GWU. My inspiration come from the 
+    media I consume ranging from games to music to kids cartoons. Even this website design was inspired by AdHoc Studio's game
+    Dispatch (more specifically the hacking minigame module). 
   </p>
 
   <p class="about-text">
-    I like turning research into interface, and interface into story. I’m usually bouncing between
-    Figma, After Effects, and creative code — then trying to make it all look like a curated folder on your desktop.
+    Kanye once told a story about coffee tables. How a two-year-old jumps on one,
+    imagining themself Superman before being told to get down. A coffee table becomes less 
+    about possibility and more about rules, and over time those rules quietly determine 
+    which risks feel acceptable. I think about design the same way: every choice 
+    introduces constraints, teaches behavior, and shapes what users believe is possible. 
+  </p>
+
+  <p class="about-text">
+    That awareness guides my work. I design with intention around flow, engagement, 
+    and accessibility — mindful that even subtle interface decisions can encourage 
+    exploration or shut it down.
   </p>
 
   <p class="about-text about-text--muted">
-    Currently: portfolio refresh • genre.exe experiments • accessibility + AI video work
+    Tools: Photoshop • After Effects • Indesign + Illustrator • Figma 
   </p>
 </div>
 
