identity hover anim done

--- a/index.html
+++ b/index.html
@@ -163,36 +163,20 @@
       <section class="work-row">
   <div class="work-media">
     <div class="thumb-row">
-      <a class="thumb" href="./assets/identity/dbr-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-1.png" alt="Days Before Rodeo poster 1"></a>
-      <a class="thumb" href="./assets/identity/dbr-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-2.png" alt="Days Before Rodeo poster 2"></a>
-      <a class="thumb" href="./assets/identity/dbr-3.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-3.png" alt="Days Before Rodeo poster 3"></a>
+      <a class="thumb" data-cap="1" href="./assets/identity/dbr-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-1.png" alt="Days Before Rodeo poster 1"></a>
+      <a class="thumb" data-cap="2" href="./assets/identity/dbr-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-2.png" alt="Days Before Rodeo poster 2"></a>
+      <a class="thumb" data-cap="3" href="./assets/identity/dbr-3.png" target="_blank" rel="noreferrer"><img src="./assets/identity/dbr-3.png" alt="Days Before Rodeo poster 3"></a>
+
     </div>
   </div>
 
   <div class="work-copy">
     <h3 class="work-title">days before rodeo — posters</h3>
-    <p class="work-text">[placeholder] concept + typography notes + what this series was for.</p>
-  </div>
-</section>
-
-
-      <!-- 2) genre.exe -->
-      <section class="work-row">
-  <div class="work-media">
-    <div class="thumb-row">
-      <a class="thumb" href="./assets/identity/genre-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/genre-1.png" alt="genre.exe screenshot 1"></a>
-      <a class="thumb" href="./assets/identity/genre-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/genre-2.png" alt="genre.exe screenshot 2"></a>
-      <a class="thumb" href="./assets/identity/genre-3.png" target="_blank" rel="noreferrer"><img src="./assets/identity/genre-3.png" alt="genre.exe screenshot 3"></a>
-    </div>
-
-    <div class="work-actions">
-      <a class="mini-btn" href="https://makdabekele.github.io/APIProject/" target="_blank" rel="noreferrer">click to view website</a>
-    </div>
-  </div>
-
-  <div class="work-copy">
-    <h3 class="work-title">genre.exe</h3>
-    <p class="work-text">[placeholder] what it critiques, how to use it, and what you learned building it.</p>
+<div class="work-notes">
+  <p class="work-note" data-cap="1">[01] placeholder — DBR poster 1 note (type/texture/hierarchy).</p>
+  <p class="work-note" data-cap="2">[02] placeholder — DBR poster 2 note (what changed + why).</p>
+  <p class="work-note" data-cap="3">[03] placeholder — DBR poster 3 note (system rule / takeaway).</p>
+</div>
   </div>
 </section>
 
@@ -201,15 +185,18 @@
       <section class="work-row">
   <div class="work-media">
     <div class="thumb-row">
-      <a class="thumb" href="./assets/identity/eyes-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/eyes-1.png" alt="Eyes edit 1"></a>
-      <a class="thumb" href="./assets/identity/eyes-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/eyes-2.png" alt="Eyes edit 2"></a>
-      <a class="thumb" href="./assets/identity/eyes-3.png" target="_blank" rel="noreferrer"><img src="./assets/identity/eyes-3.png" alt="Eyes edit 3"></a>
+      <a class="thumb" data-cap="1" href="./assets/identity/eyes-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/eyes-1.png" alt="Eyes edit 1"></a>
+      <a class="thumb" data-cap="2" href="./assets/identity/eyes-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/eyes-2.png" alt="Eyes edit 2"></a>
+      <a class="thumb" data-cap="3" href="./assets/identity/eyes-3.png" target="_blank" rel="noreferrer"><img src="./assets/identity/eyes-3.png" alt="Eyes edit 3"></a>
     </div>
   </div>
 
   <div class="work-copy">
     <h3 class="work-title">eyes — photoshop iterations</h3>
-    <p class="work-text">[placeholder] technique notes + what changed between versions.</p>
+    <div class="work-notes">
+      <p class="work-note" data-cap="1">[01] placeholder — eyes edit 1 note (color choice / mood).</p>
+      <p class="work-note" data-cap="2">[02] placeholder — eyes edit 2 note (composition / focus).</p>
+      <p class="work-note" data-cap="3">[03] placeholder — eyes edit 3 note (final tweaks / effects).</p>
   </div>
 </section>
 
@@ -218,41 +205,25 @@
       <section class="work-row">
   <div class="work-media">
     <div class="thumb-row">
-      <a class="thumb" href="./assets/identity/misc-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/misc-1.png" alt="Misc poster 1"></a>
-      <a class="thumb" href="./assets/identity/misc-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/misc-2.png" alt="Misc poster 2"></a>
+      <a class="thumb" data-cap="1" href="./assets/identity/misc-1.png" target="_blank" rel="noreferrer"><img src="./assets/identity/misc-1.png" alt="Misc poster 1"></a>
+      <a class="thumb" data-cap="2" href="./assets/identity/misc-2.png" target="_blank" rel="noreferrer"><img src="./assets/identity/misc-2.png" alt="Misc poster 2"></a>
 
-      <div class="thumb thumb--video">
-        <video class="thumb-video" controls preload="metadata">
-          <source src="./assets/identity/misc-3.MOV" type="video/quicktime">
-        </video>
-      </div>
-    </div>
+      <video class="thumb-video" data-cap="3" controls preload="metadata" poster="./assets/identity/misc-3-poster.png">
+  <source src="./assets/identity/misc-3.mp4" type="video/mp4">
+</video>
+</div>
   </div>
 
   <div class="work-copy">
     <h3 class="work-title">posters + promo</h3>
-    <p class="work-text">[placeholder] what the event was + what your role was + tools used.</p>
+    <div class="work-notes"> 
+      <p class="work-note" data-cap="1">[01] placeholder — misc poster 1 note (design choices / theme).</p>
+      <p class="work-note" data-cap="2">[02] placeholder — misc poster 2 note (visual hierarchy / impact).</p>
+      <p class="work-note" data-cap="3">[03] placeholder — promo video note (storyboard / editing).</p>
   </div>
 </section>
 
-
-      <!-- 5) Logos -->
-      <section class="work-row">
-  <div class="work-media">
-    <div class="thumb-row">
-      <a class="thumb" href="./assets/identity/logo-pcart.png" target="_blank" rel="noreferrer"><img src="./assets/identity/logo-pcart.png" alt="P-Cart logo"></a>
-      <a class="thumb" href="./assets/identity/logo-ecdc-womens.png" target="_blank" rel="noreferrer"><img src="./assets/identity/logo-ecdc-womens.png" alt="ECDC women’s empowerment logo"></a>
-    </div>
-  </div>
-
-  <div class="work-copy">
-    <h3 class="work-title">logos — p-cart + ecdc women’s empowerment</h3>
-    <p class="work-text">[placeholder] constraints, iteration, and final usage.</p>
-  </div>
-</section>
-
-
-      <!-- 6) Nintendo deck — mouse-scroll carousel -->
+    <!-- 5) Nintendo deck — mouse-scroll carousel -->
       <section class="work-row work-row--deck">
   <div class="work-media">
     <div class="deck-rail" data-deck>
@@ -274,9 +245,32 @@
 
   <div class="work-copy">
     <h3 class="work-title">nintendo connect — rebrand deck</h3>
-    <p class="work-text">[placeholder] the system (type, color, UI) + what problems you were solving.</p>
+    <div class="work-notes">
+      <p class="work-note" data-cap="1">[01] placeholder — deck note (structure / flow).</p>
+      <p class="work-note" data-cap="2">[02] placeholder — deck note (visual style / consistency).</p>
+      <p class="work-note" data-cap="3">[03] placeholder — deck note (key highlights / features).</p>
   </div>
 </section>
+
+      <!-- 6) Logos -->
+      <section class="work-row">
+  <div class="work-media">
+    <div class="thumb-row">
+      <a class="thumb" data-cap="1" href="./assets/identity/logo-pcart.png" target="_blank" rel="noreferrer"><img src="./assets/identity/logo-pcart.png" alt="P-Cart logo"></a>
+      <a class="thumb" data-cap="2" href="./assets/identity/logo-ecdc-womens.png" target="_blank" rel="noreferrer"><img src="./assets/identity/logo-ecdc-womens.png" alt="ECDC women’s empowerment logo"></a>
+    </div>
+  </div>
+
+  <div class="work-copy">
+    <h3 class="work-title">logos — p-cart + ecdc women’s empowerment</h3>
+    <div class="work-notes" >
+      <p class="work-note" data-cap="1">[01] placeholder — P-Cart logo note (concept / symbolism).</p>
+      <p class="work-note" data-cap="2">[02] placeholder — ECDC logo note (color palette / typography).</p>
+  </div>
+</section>
+
+
+  
 
 
 
