somewhat recovered jesus fuck

--- a/index.html
+++ b/index.html
@@ -268,36 +268,29 @@
       <p class="work-note" data-cap="2">[02] placeholder — ECDC logo note (color palette / typography).</p>
   </div>
 </section>
+    </div>
+  </div>
+</section>
 
 
-  
+  <!-- Panel: MUSIC -->
+<section class="panel" role="tabpanel" aria-labelledby="tab-music" data-panel="music" hidden>
+  <div class="panel-inner panel-scroll">
+    <header class="panel-head">
+      <h2 class="panel-title">music culture</h2>
+      <p class="panel-sub">systems • prototypes • edits</p>
+    </header>
 
+    <div class="proj-list">
 
-
-          <!-- Panel: MUSIC -->
-          <section class="panel" role="tabpanel" aria-labelledby="tab-music" data-panel="music" hidden>
-            <div class="panel-inner">
-              <div class="placeholder">
-                <div class="ph-title">Music Culture</div>
-                <div class="ph-sub">coming soon</div>
-              </div>
-            </div>
-          </section>
-
-          <!-- Panel: ARCHIVE -->
-          <section class="panel" role="tabpanel" aria-labelledby="tab-archive" data-panel="archive" hidden>
-            <div class="panel-inner">
-              <div class="placeholder">
-                <div class="ph-title">Archive</div>
-                <div class="ph-sub">coming soon</div>
-              </div>
-            </div>
-          </section>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <script src="main.js"></script>
-</body>
-</html>
+      <!-- 1) VOOL — Figma prototype playthrough -->
+      <section class="work-row" data-work="vool">
+        <div class="work-media">
+          <div class="thumb-row thumb-row--single">
+            <div class="thumb thumb--phone" aria-label="VOOL prototype video">
+              <video class="thumb-video thumb-video--phone"
+                     controls
+                     preload="metadata"
+                     poster="./assets/music/vool/vool-poster.jpg"
+                     playsinline>
+       
