genre.exe section done

--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
             <div class="thumb thumb--phone" aria-label="VOOL prototype video">
               <video class="thumb-video thumb-video--phone"
                      controls
+                     muted
                      preload="metadata"
                      poster="./assets/music/vool/vool-poster.jpg"
                      playsinline>
@@ -320,6 +321,7 @@
             <div class="thumb thumb--wide" aria-label="genre.exe website video">
               <video class="thumb-video thumb-video--wide"
                      controls
+                     muted
                      preload="metadata"
                      poster="./assets/music/genre-exe/genre-exe-poster.jpg"
                      playsinline>
@@ -327,17 +329,15 @@
               </video>
             </div>
           </div>
-
-          <div class="proj-actions">
-            <!-- put your real URL here -->
-            <a class="mini-btn" href="#" target="_blank" rel="noreferrer">open website</a>
-          </div>
         </div>
 
         <div class="work-copy">
           <h3 class="work-title">genre.exe — genre as a network</h3>
           <p class="work-text">[placeholder] critique: streaming platforms flatten genre into marketable labels.</p>
           <p class="work-text muted">[placeholder] what you built instead: community tags + linked categories → a web, not a dropdown.</p>
+          <div class="proj-actions">
+            <a class="mini-btn" href="https://makdabekele.github.io/APIProject/" target="_blank" rel="noreferrer">open website</a>
+          </div>
         </div>
       </section>
 
